--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ main nav p:nth-child(2n) {
 }
 
 main section {
-  margin-top: 20px;
+  margin-top: 25px;
 }
 
 main section span {
@@ -93,7 +93,7 @@ main section span p {
 }
 
 main section p {
-  margin-top: 5px;
+  margin-top: 17px;
 }
 
 main section h3 {
@@ -101,8 +101,10 @@ main section h3 {
   margin-bottom: 5px;
 }
 
-main section ul {
+aside section ul {
   margin-left: 30px;
+  margin-top: 5px;
+  margin-bottom: 15px;
 }
 
 li::marker {
@@ -116,7 +118,8 @@ li::marker {
 }
 
 aside {
-  width: 326px;
+  width: 306px;
+  margin-left: 20px;
 }
 
 aside section {
@@ -182,4 +185,11 @@ img {
     align-items: flex-start;
     flex-direction: column;
   }
+}
+
+.section_content {
+  align-items: baseline;
+}
+.section_content p {
+  margin-top: 0;
 }
