--- a/style.css
+++ b/style.css
@@ -13,7 +13,12 @@
   --hover-color: #0063fb;
 }
 
-a {
+a,
+a:active,
+a:focus,
+a:hover,
+a:link,
+a:visited {
   all: unset;
   cursor: pointer;
 }
